adding more blog2

--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -1,5 +1,5 @@
 ---
-title: "How to get a job in tech part 4: Preparing for your Interview!"
+title: "How to get a job in tech part 4: Negotiation"
 date: "2019-05-29T12:00:00.000Z"
 dateModified: "2019-08-08T12:00:00.000Z"
 template: "post"
@@ -8,15 +8,14 @@ draft: false
 slug: "/blog/get-a-job-4/"
 img: "https://victorzhou.com/media/cnn-post/maxpool-backprop.png"
 isML: true
-category: "Machine Learning"
+category: "Landing a tech job"
 tags:
-  - "Machine Learning"
-  - "Neural Networks"
-  - "Computer Vision"
-  - "Python"
-  - "For Beginners"
-description: An Indepth walkthru of how to prepare for your interviews.
-prev: "/blog/intro-to-rnns/"
+  - "tech job"
+  - "new grads"
+  - "how to"
+  - "cracking the tech interview"
+description: An Indepth walkthrough of how to negotiate your offers.
+prev: "/series/intro-to-climate-change/"
 next: "/blog/intro-to-rnns/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1133752584383205377
 discussLinkHN: https://news.ycombinator.com/item?id=20064900
