--- a/content/posts/2019-08-08-keras-cnn.md
+++ b/content/posts/2019-08-08-keras-cnn.md
@@ -1,5 +1,5 @@
 ---
-title: "Keras for Beginners: Implementing a Convolutional Neural Network"
+title: "Getting a job in tech : Preparing for  Interviews"
 date: "2019-08-08T12:00:00.000Z"
 template: "post"
 draft: false
@@ -14,9 +14,9 @@ tags:
   - "Neural Networks"
   - "For Beginners"
   - "Computer Vision"
-description: A beginner-friendly guide on using Keras to implement a simple Convolutional Neural Network (CNN) in Python.
-prev: "/blog/intro-to-cnns-part-1/"
-next: "/blog/intro-to-rnns/"
+description: A beginner friendly guide to cracking the behavioral an coding interview
+prev: "/blog/intro-to-rnns/"
+next: "/blog/get-a-job-4/"
 ---
 
 ![](./media-link/keras-posts/keras-logo.png)
