adding ui changes

--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -5,7 +5,7 @@ dateModified: "2020-03-11T12:00:00.000Z"
 template: "post"
 usesKatex: true
 draft: false
-slug: "/blog/intro-to-neural-networks/"
+slug: "/blog/get-a-job-1/"
 img: "https://victorzhou.com/media/neural-network-post/network3.png"
 isML: true
 category: "landing a tech job"
@@ -15,8 +15,8 @@ tags:
   - "how to"
   - "cracking the tech interview"
 description: "A ready to go resume is your most powerful way to get interviews. Let's get your resume there."
-prev: "/series/intro-to-neural-networks/"
-next: "/blog/intro-to-rnns/"
+prev: "/series/how-to-get-a-job-in-tech/"
+next: "/blog/get-a-job-2/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1102644406727966722
 discussLinkHN: https://news.ycombinator.com/item?id=19320217
 discussLinkReddit: https://www.reddit.com/r/Python/comments/axnvut/implementing_a_neural_network_from_scratch_in/
