--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -4,7 +4,7 @@ date: "2020-03-11T12:00:00.000Z"
 template: "post"
 usesKatex: true
 draft: false
-slug: "/blog/intro-to-rnns/"
+slug: "/blog/get-a-job-2/"
 img: "https://victorzhou.com/media/rnn-post/bptt.png"
 isML: true
 category: "landing a tech job"
@@ -14,8 +14,8 @@ tags:
   - "how to"
   - "cracking the tech interview"
 description: 4 ways to effectively apply to jobs.
-prev: "/blog/intro-to-neural-networks/"
-next: "/blog/keras-cnn-tutorial/"
+prev: "/blog/get-a-job-1/"
+next: "/blog/get-a-job-3/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1154055678518054912?s=20
 discussLinkHN: https://news.ycombinator.com/item?id=20524543
 ---
