--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -6,7 +6,7 @@ template: "post"
 usesKatex: true
 draft: false
 slug: "/blog/get-a-job-1/"
-img: "../sf.jpg"
+img: gaitamtata.jpg
 isML: true
 category: "landing a tech job"
 tags:
@@ -22,7 +22,7 @@ discussLinkHN: https://news.ycombinator.com/item?id=19320217
 discussLinkReddit: https://www.reddit.com/r/Python/comments/axnvut/implementing_a_neural_network_from_scratch_in/
 ---
 
-![silicon valley](../../static/media/sf.jpg)
+
 
 Let's get something straight. A lot of people in the valley are really smart and just **name-drop** in their resumes. But what if you're like me? What if you went to a no-name school with no Big-N internships but you want to work in Big Tech?
 
