--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -16,7 +16,7 @@ tags:
   - "cracking the tech interview"
 description: An Indepth walkthrough of how to prepare for your interviews.
 prev: "/blog/get-a-job-3/"
-next: "blog/get-a-job-2/"
+next: "/blog/get-a-job-2/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1133752584383205377
 discussLinkHN: https://news.ycombinator.com/item?id=20064900
 ---
