minor bug fixes

--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -22,18 +22,20 @@ discussLinkHN: https://news.ycombinator.com/item?id=19320217
 discussLinkReddit: https://www.reddit.com/r/Python/comments/axnvut/implementing_a_neural_network_from_scratch_in/
 ---
 
+![San Francisco](../../static/media/sf.jpg)
 
-
-Let's get something straight. A lot of people in the valley are really smart and just **name-drop** in their resumes. But what if you're like me? What if you went to a no-name school with no Big-N internships but you want to work in Big Tech?
+Let's get something straight. This article is for people who cannot **drop-names** in their resume. (Because if you did, you wouldn't need to read this article.) 
+This blog is for someone like me, someone who went to a no-name school and never worked in a big-N before.
 
 The resume is what lands you those interviews. So, let's talk about what you can improve in your resume in order to make it **more visible and attractive** to recruiters.
 
 ## Table of Contents
-1. Beating the Applicant tracking system(ATS)
-2. Getting past the 6-second recruiter screen.
-3. Getting past the engineering manager.
+1. Example of how your resume travels around a big N
+2. Beating the Applicant tracking system(ATS)
+3. Getting past the 6-second recruiter screen.
+4. Getting past the engineering manager.
 
-4. **A socially unethical experiment**
+5. **A socially unethical experiment**
 
 ## Example
 I'm going to give you an example of numbers on how your resume gets to the engineering manager.
@@ -62,14 +64,14 @@ Long story short, An Applicant Tracking System or ATS for short - is a software 
 So whether we like it or not, the ATS is here to stay.
 
 
-### a. Basics of how ATS works
+### I. Basics of how ATS works
 The ATS parses a resume's content into categories and then scans those categories for specific keywords which have been predetermined and then ranks the resume. If there was **x%** match then the resume is passed on to the recruiter.
 
 So this only means that the ATS is designed to weed out the **least-qualified** applicants as opposed to identify which candidates are the best.
 
 This as you may have guessed also weeds out the best candidates who don't have the **right words** in their resume. If this is one of you and you have received tons of rejections it's not your fault.
 
-### b. Beating ATS
+### II. Beating ATS
 
 **So here is where resumes go wrong. (stats accoriding to TopResume)**
 1. 25% of applicants have buried contact information in the header.
@@ -79,7 +81,7 @@ This as you may have guessed also weeds out the best candidates who don't have t
 
 Contrary to popular belief, PDF is not the most ATS-friendly file type. While PDF's do a phenomenal job at presevering design,style and format of your resume not all ATS fully support PDF's. So, unless the file type listed is pdf stick to using **.doc or .docx**. Amazingly, **.txt** file types are the best for ATS parsing but limit your options for style and design.
 
-### b.2 Optimize with the right keywords
+### II(a) Optimize with the right keywords
 One of the best ways to beat ATS is to use the right words in your resume. A lot of times, you might think that using words like "attention to detail", "proactive" etc may seem like fluff or too much but if it's in the job-description, unfortunately it might have been added to ATS. so to play if safe, you can add it to soft-skills part of your resume. No one is going to judge you for adding those words so better safe than sorry!
 
 A great website for this is [jobscan.io](https://www.jobscan.co/) which has a ATS parser for anyone who wants to use it. It also provides great metrics such as what experiences it found, skills found etc. You can just paste the job description in one box and your resume in another and Voila! you have your results ready.
