--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -20,7 +20,7 @@ discussLinkHN: https://news.ycombinator.com/item?id=20524543
 ---
 
 ## Introduction
-This is a follow-up article which demonstrates the **RIGHT** way to apply for jobs.
+This is a follow-up article that demonstrates the **RIGHT** way to apply for jobs.
 
 **NOTE: Some of these methods might be socially unacceptable and therefore you should do what YOU feel is right.**
 
@@ -62,39 +62,37 @@ As you can see, an incredible percentage **(~72%)** of my interviews were from c
 
 Overall, I converted my application into interviews approximately **1/4 times** so, 1 interview for every 4 rejected.
 
-An important thing to note: All of these interviews are over a period of time. There are many variables affecting these numbers: Continuous iteration of my resume over a period of time, peaks and valleys in hiring etc.
+An important thing to note: All of these interviews are over 7 months. Many variables are affecting these numbers: Continuous iteration of my resume over some time, peaks and valleys in hiring, etc.
 
 But the overwhelming statistic here is that Cold-emailing and walking into companies got me my interviews.
 
 
-# The Methods to Apply for Jobs
+# Methods to Apply for Jobs
 
 ## Employee Referral
 This is by far the easiest way to get your resume directly read by a recruiter or even an engineering manager!
 
-The referral almost guarantees that your resume will atleast be read by a human. So if you can get one of those valuable referral go get em!
+The referral almost guarantees that your resume will at least be read by a human. So if you can get one of those valuable referrals go get em!
 
 ### Tips for getting employee referrals
 
-Squeeze your networks (Extremely shamelessly - Cannot say this enough): For many people, reaching out to your friends, alumni, professors, classmates for referrals might be embarrasing. Trust me it was for me!. 
+Squeeze your networks (Extremely shamelessly - Cannot say this enough): For many people, reaching out to your friends, alumni, professors, classmates for referrals might be embarrassing. Trust me it was for me!. 
 
 But the other point to think here is that it is YOUR JOB/A CAREER YOU ARE INTERESTED IN! The reality is that most people are always ready to help. The other reason they will help you is that Valley Companies often give very high referral bonuses if you get hired (5-10k!) so people are usually incentivized to give you a referral. The other thing to remember is that this is not a huge hassle. It usually takes <2 mins and 1 click of a button.
 
-Below I have attached samples of 2 emails that I used to ask for referrals. 1 is with a classmate who works at Atallasian and the other is with my professor who has tons of contacts in the valley. For my professor, I just browsed his LinkedIn contacts made a spreadsheet of people I would like an introduction to. For some he did for most he didn't. I got an interview at VISA and Apple this way.
+Below I have attached samples of 2 emails that I used to ask for referrals. 1 is with a classmate who works at Atalassian and the other is with my professor who has tons of contacts in the valley. For my professor, I just browsed his LinkedIn contacts made a spreadsheet of people I would like an introduction to. For some he did for most he didn't. I got an interview at VISA and Apple this way.
 
 
 **Friend/Aquaintance**
 
 ```
-Hey Person I know from School,
-I hope you're doing well. I think we may 
-have crossed paths in one of our classes.
+Hey, Person, I know from School,
+I hope you're doing well. I think we may have crossed paths in one of our classes.
 
 I saw on LinkedIn that you're working at Atlassian. Congrats! 
-Hope the job's been treating you well.
+I hope the job's been treating you well.
 
-I'd greatly appreciate a chance to chat about how to 
-effectively approach applying to companies. I've already 
+I'd greatly appreciate a chance to chat about how to effectively approach applying to companies. I've already 
 applied quite a few companies, but haven't heard back.
 
 Do you have 20 mins sometime next week, say Tuesday, 
@@ -109,7 +107,7 @@ I obsess over user experience and I do whatever it takes
 to deliver reliable, useful software.
 
 Out of my projects, I’m most proud of the work that I’ve
-done for the Pacific Grove museum, to help researchers … 
+done for the Pacific Grove Museum, to help researchers … 
 
 1 min video in which I explain and walk through the project: 
 Codebase: 
@@ -121,8 +119,8 @@ Portfolio
 resume
 --------------------------
 
-Once again, would greatly appreciate any help / advice 
-you may have. I look forward hearing back. 
+Once again, I would greatly appreciate any help/advice 
+you may have. I look forward to hearing back. 
 
 Regards,
 Gautam Tata,
@@ -131,9 +129,9 @@ w: www.gautamtata.com
 ```
 **Professor**
 ```
-Hi Professor who I know has a ton of contacts,
+Hi, Professor who I know has a ton of contacts,
 
-Hope you've been well. Thanks for a great capstone and an 
+I hope you've been well. Thanks for a great capstone and an 
 amazing senior year!
 
 I'd greatly, greatly appreciate your help in the following
@@ -141,24 +139,18 @@ ways, if possible:
 
 1. Could you introduce me to people you know at Tech companies 
 in the United States so that I can demonstrate to them what 
-I can bring to their teams? I've already compiled this sheet
+I can bring it to their teams? I've already compiled this sheet
 in which I listed all of your contacts that I found on 
-LinkedIn, who I'd like to connect with. For each person 
-you are willing to introduce me to, I will draft up a 
-tailored email targeted to that person, in which I share 
-a summary of the work that I've done, and ask them for a
+LinkedIn, who I'd like to connect with. For each person you are willing to introduce me to, I will draft up a 
+tailored email targeted to that person, in which I share a summary of the work that I've done, and ask them for a
 chance to chat about open roles and for a chance to demonstrate
-what I can bring to their teams. Then, you can simply forward 
-that email asking if they're OK with a connection, 
-and if yes, you can just CC me on that email thread. 
+what I can bring to their teams. Then, you can simply forward that email asking if they're OK with a connection and if yes, you can just CC me on that email thread. 
 
-2. Could you please provide feedback on the blurb I've 
-included below? This is the main piece in my outreach 
-to companies. I've tried to make it as clear as possible 
+2. Could you please provide feedback on the blurb I've included below? This is the main piece in my outreach to companies. I've tried to make it as clear as possible 
 what I can do. Unfortunately I haven't had much luck 
 applying to companies online or directly reaching 
-out to engineering managers / recruiters at companies. 
-Would appreciate any advice you may have.
+out to engineering managers/recruiters at companies. 
+I would appreciate any advice you may have.
 
 ------------------------
 About me:
@@ -168,10 +160,10 @@ that have users. I obsess over user experience and I do whatever
 it takes to deliver reliable, useful software.
 
 Out of my projects, I’m most proud of the web application 
-I built for the Pacific Grove museum, to help researchers 
+I built for the Pacific Grove Museum, to help researchers 
 effectively communicate the effects of climate change on 
 the local water ecosystem - to the local community. 
-This application was built in React, and has had hundreds 
+This application was built in React and has had hundreds 
 of visitors so far.
 
 1 min video in which I explain and walk through the project: 
@@ -183,8 +175,7 @@ Other links: Github, Portfolio, Resume, LinkedIn
 ------------------------
 
 I know I'm asking for a lot. I want to minimize the 
-effort needed on your end to help me out, so please 
-let me know if there's anything else I can do to 
+effort needed on your end to help me out, so please let me know if there's anything else I can do to 
 make this easier for you. I would greatly 
 appreciate your help. Thank you.
 
@@ -195,23 +186,23 @@ ph:
 w: www.gautamtata.com
 ```
 
-The other method you can use for referral is use [teamBlind](https://www.teamblind.com/post/How-do-you-ask-for-referrals-E5FCfr8Q). People there usually post for referrals and are usually slammed by most people but you only need that 1-2 to click! Just write a nice message and I'm sure something will click.
+The other method you can use for a referral is to use [teamBlind](https://www.teamblind.com/post/How-do-you-ask-for-referrals-E5FCfr8Q). People there usually post for referrals and are usually slammed by most people but you only need that 1-2 to click! Just write a nice message and I'm sure something will click.
 
 Another way is using [Rooftop Slushie](https://www.rooftopslushie.com/) where you can set some amount of money for employees to give you referrals. This is also another popular method.
 
-Note: I personally have never used the methods but have seen it happen so use it at your own benefit.
+Note: I have never used the methods but have seen it happen so use it at your benefit.
 ## The art of cold-emailing
-Here's the big one. For the next two methods, which is cold emailing and walking into companies, A lot of people don't use it out of fear and other don't because they think its socially unacceptable. Again, I just want to reiterate: Use it at your own benefit.
+Here's the big one. For the next two methods, which is cold emailing and walking into companies, A lot of people don't use it out of fear and others don't because they think its socially unacceptable. Again, I just want to reiterate: Use it at your benefit.
 
-Now, lets say that you have no friends/professors from whom you can ask for referrals. Or lets say that you've milked your contacts and still no luck.No worries, you have officially used what you can say "the tip of the iceberg". 
+Now, let us say that you have no friends/professors from whom you can ask for referrals. Or let's say that you've milked your contacts and still no luck.No worries, you have officially used what you can say "the tip of the iceberg". 
 
 You know have access to 1000's if not 10's of thousands of employees who work at places you want to work. This is the next step. You want to cold email the people who work at these companies and try to impress them. Impress them enough that they directly give you an interview or in some circumstances: straight offers.
 
-**Who to Email**: The people in power. The people who can either get you an interview directly or the people who can hand your resume in order to get you an interview.
+**Who to Email**: The people in power. The people who can either get you an interview directly or the people who can hand your resume to get you an interview.
 
 **Who are those people**: Those people are the Engineering managers or the Engineers working on the team.
 
-**WHY?**: If an Engineer or Engineering Manager wants you on their team they can make things happen! They can skip steps, get you ahead of line etc. Usually everyone is spamming the recruiters so the odds that they get back to you are slim.
+**WHY?**: If an Engineer or Engineering Manager wants you on their team they can make things happen! They can skip steps, get you ahead of the line, etc. Usually everyone is spamming the recruiters so the odds that they get back to you are slim.
 
 TOOLS THAT YOU NEED TO USE:
 1. [LinkedIn](https://www.linkedin.com): Use this to find the names of Engineering managers. Click on the company name -> People -> Search Engineering Manager.
@@ -220,7 +211,7 @@ TOOLS THAT YOU NEED TO USE:
 
 3. [snov.io](https://snov.io/): Use this to track who has opened your email. This is to determine whether or not your emails are being read. Usually a manager who is interested will open your email multiple times and click on different links. All of which can be accessed for free.
 
-4. Companies that I got an interview from: Quora, 23nMe, VSCO, Apple, Benchling,Mapbox, Zendesk and many more.
+4. Companies that I got an interview from Quora, 23nMe, VSCO, Apple, Benchling, Mapbox, Zendesk and many more.
 
 Here is a sample of a cold-email that I used: 
 ``` 
@@ -233,7 +224,7 @@ I'm a full-stack engineer that just graduated from CSU Monterey Bay
 with a degree in Computer Science, and have built a variety of
 products - a few that have actual users. 
 I obsess over user experience and do whatever it takes to build a 
-product that delivers value to its users.
+the product that delivers value to its users.
 
 In all honesty, I only learned about 23andme a few months ago 
 from a friend who brought it up in a conversation about how 
@@ -245,8 +236,7 @@ through prediction - an opportunity I find very exciting.
 I'd greatly appreciate a chance to chat with you about what
 I can bring to the table. Are you available for a 10 min 
 phone call or coffee in the coming weeks, say Friday 
-June 14th at 3pm? I understand you're very busy, 
-and am happy to work around your schedule in any way.
+June 14th at 3 pm? I understand you're very busy and am happy to work around your schedule in any way.
 
 Thanks in advance.
 
@@ -276,8 +266,7 @@ difficult to get into this space being a new-grad. Therefore,
 I am reaching out to you for any possible internship/apprenticeship 
 opportunities on your team.
 
-I have been learning a lot about working with maps but taking courses 
-on OpenStreetMaps and learning tools like Apache Spark, Hadoop, postGIS,
+I have been learning a lot about working with maps but taking courses on OpenStreetMaps and learning tools like Apache Spark, Hadoop, PostGIS,
 etc. As a reference to what I have learned, I have built an
 application that demonstrates my capability in learning 
 new technologies.  
@@ -301,27 +290,27 @@ Gautam Tata
 
 ```
 
-Yes, you read that right. That was the CEO of the company (whom I did get a response from!). The types of people I have cold emailed and gotten a response from are Engineers, Engineering Managers, VP's and CEO's.
+Yes, you read that right. That was the CEO of the company (whom I did get a response from!). The types of people I have cold emailed and gotten a response from are Engineers, Engineering Managers, VP's and CEO.
 
 TIPS FOR COLD EMAIL:
 
-1. Show extreme passion and enthusiasm for their companies! Show that you've read their blog posts or their patents. If you can show that level of enthusaism for that company, trust me you are going to get that interview.
+1. Show extreme passion and enthusiasm for their companies! Show that you've read their blog posts or their patents. If you can show that level of enthusiasm for that company, trust me you are going to get that interview.
 
-2. WAIT! If you don't get an email back in a day or two don't fret. Even if they leave you on read. I cannot stress this enough. Its a waiting game and people are busy! (Especially the higher up the chain you go)
+2. WAIT! If you don't get an email back in a day or two don't fret. Even if they leave you on reading. I cannot stress this enough. Its a waiting game and people are busy! (Especially the higher up the chain you go)
 
 ## Walking into companies
 
-Here is comes. Here is where everyone will tell me how this is unacceptable and why you should not do this. Well for me, this got me basically the majority of all my interviews so please feel free to skip this section if you cannot go forward with this approach.
+Here is comes. Here is where everyone will tell me how this is unacceptable and why you should not do this. Well for me, this got me the majority of all my interviews so please feel free to skip this section if you cannot go forward with this approach.
 
-Having spent all my adult life in the Bay, I've always heard about [The hustle of the bay](https://www.kqed.org/arts/13861451/welcome-back-to-the-hustle-a-series-about-bay-area-artists-and-their-money) and how it is widely respected. I decided to go with the hustle route. A route which alot of my friends told me is not okay.
+Having spent all my adult life in the Bay, I've always heard about [The hustle of the bay](https://www.kqed.org/arts/13861451/welcome-back-to-the-hustle-a-series-about-bay-area-artists-and-their-money) and how it is widely respected. I decided to go with the hustle route. A route that a lot of my friends told me is not okay.
 
 So here's how you do it. Grab your resume, make a cover letter for the engineering manager (could be the same as cold email) and just walk inside companies and drop your letter off. **THATS IT**
 
-Go as far as you can in the company; drop off at the entrance desk; give it straight to the engineer if accessible; whatever you need to do inorder to get it to the right hands.
+Go as far as you can in the company; drop off at the entrance desk; give it straight to the engineer if accessible; whatever you need to do to get it to the right hands.
 
-**SECONDARY APPROACH** : Post it. Every Engineer has a mailbox at their company and will have mail delivered to them. Worst case, they open it say a few words and trash it. Best case - They **LOVE** the way you approach things and decide to give you an interview. 
+**SECONDARY APPROACH**: Post-it. Every Engineer has a mailbox at their company and will have mail delivered to them. Worst case, they open it says a few words and trash it. Best case - They **LOVE** the way you approach things and decide to give you an interview. 
 
-P.S: I got an Uber onsite this way; no frills, no hackerrank just straight Onsite.
+P.S: I got an Uber onsite this way; no-frills, no hackerrank just straight Onsite.
 
 The list of companies that I got interviews with this way is nothing but incredible.
 
@@ -330,22 +319,22 @@ I urge you to drop any shame and just go get it done. You can thank me later.
 > There isn't just one door to get into a company. There's always a backdoor - Karthik Uppuluri (Hustler)
 
 ## Career Fairs
-Aah, the college career fairs. The hustle bustle of the students. Huge lines for companies for a few seconds to talk to a recruiter or engineer and impress them enough to interview you.
+Aah, the college career fairs. The hustle-bustle of the students. Huge lines for companies for a few seconds to talk to a recruiter or engineer and impress them enough to interview you.
 
-Here's the know how:
+Here's the know-how:
 
 1. Have a resume in your hand and be ready.
-2. Have a 30 second elevator pitch: Who you are, what you do and what you're interested in.
-3. Have your phone in hand with the contacts open: Immediately after the conversation ask them for their work email for a follow up email.
-4. Know who you are talking to: Recruiter or Engineer. (Usually very easy to spot!)
-If you are talking to a recruiter, know your buzzwords. Mine were React, Machine-learning, TensorFlow, MEAN stack.
+2. Have a 30-second elevator pitch: Who you are, what you do and what you're interested in.
+3. Have your phone in hand with the contacts open: Immediately after the conversation ask them for their work email for a follow-up email.
+4. Know who you are talking to the Recruiter or Engineer. (Usually very easy to spot!)
+If you are talking to a recruiter, know your buzzwords. Mine was React, Machine-learning, TensorFlow, MEAN stack.
 5. If you are talking to an engineer, be ready to explain your past work/projects in detail. You should be ready at any point to talk 30 minutes about your projects.
 6. Stay till the end. Ask if you can help out. They're usually carrying a ton of stuff to their cars and are tired at the end of the day. Use this time to sell yourself. [I got an interview with Plaid this way :)]
 7. Same Day Follow up!
 
 ### A Socially Unacceptable Experiment
 
-I went to a small school in the central valley. The best company that came to my school was In'n'out. So I decided to drive up 2 hours to Berkeley,CA and tried to attend the UC Berkeley Career Fair.
+I went to a small school in the central valley. The best company that came to my school was In'n'out. So I decided to drive up 2 hours to Berkeley, CA and tried to attend the UC Berkeley Career Fair.
 
 Here are 2 ways that you shouldn't do it:
 
