--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -27,7 +27,7 @@ discussLinkReddit: https://www.reddit.com/r/Python/comments/axnvut/implementing_
 Let's get something straight. This article is for people who cannot **drop-names** in their resume. (Because if you did, you wouldn't need to read this article.) 
 This blog is for someone like me, someone who went to a no-name school and never worked in a big-N before.
 
-The resume is what lands you those interviews. So, let's talk about what you can improve in your resume in order to make it **more visible and attractive** to recruiters.
+The resume is what lands you those interviews. So, let's talk about what you can improve in your resume to make it **more visible and attractive** to recruiters.
 
 ## Table of Contents
 1. Example of how your resume travels around a big N
@@ -40,7 +40,7 @@ The resume is what lands you those interviews. So, let's talk about what you can
 ## Example
 I'm going to give you an example of numbers on how your resume gets to the engineering manager.
 
-On average, a Salesforce software engineering position gets about **~3000 applicants.(Online applications)** Now that's a huge number. 
+On average, a Salesforce software engineering position gets about **~3000 applicants. (Online applications)** Now that's a huge number. 
 
 1. But what most applicants don't realize is that 75% of those resumes are automatically rejected by something called ATS (Applicant Tracking System) and this is taking the lower bound of percentages.
 2. Congratulations! Now you are one of the 750 people whose resume has made it to a human. The recruiter. Now it's time for the infamous **six-second-resume-scan**. The recruiter on average will spend about 6-10 seconds on a resume scanning for keywords and will further narrow the applicant trail down to 100-150 applicants. That's another 20% decrease in applicants.
@@ -48,71 +48,71 @@ On average, a Salesforce software engineering position gets about **~3000 applic
 4. The next step would be another screen which could be technical/behavioral which should reduce the candidate pool to 10-15.
 5. The engineering manager then decides if you should be called onsite. If you have come onsite, there are about 5-7 more interviews before you get the offer.
 
-**Nervous? You shouldn't be.** The Bay Area is known for it's competitive hiring and companies use the strategy of rejecting talented people if that means avoiding **hiring false positives.**
+**Nervous? You shouldn't be.** The Bay Area is known for its competitive hiring and companies to use the strategy of rejecting talented people if that means avoiding **hiring false positives.**
 
-There is a lot of **randomeness** in the process. The recruiter might be busy or just about to go on lunch and might throw away your resume. The ATS might incorrectly read some experience that you thought will come up etc.
+There is a lot of **randomness** in the process. The recruiter might be busy or just about to go on lunch and might throw away your resume. The ATS might incorrectly read some experience that you thought will come up etc.
 
-We just want to do our best in order to minimize the randomeness. 
-## Without further ado, here are the following Tips to make your resume stand out: 
+We just want to do our best to minimize the randomness. 
+## Without further ado, here are the following tips to make your resume stand out: 
 
 ## 1. ATS Scanner
-This here is the big one. Most (if not all) tech companies in the valley use an ATS scanner in-order to parse applicants resumes.
+This here is the big one. Most (if not all) tech companies in the valley use an ATS scanner in-order to parse applicants' resumes.
 
 
-Long story short, An Applicant Tracking System or ATS for short - is a software that is used by recruiters/recruiting agencies to collect, sort, parse and rank perspective job-seekers according to open positions. You might be asking why companies use this and/or this might seem unfair. Well, the honest truth is that Fortune 500 companies receive way too many applicants to be sorted by humans. This would clog up the pipeline and make hiring slower. 
+Long story short, An Applicant Tracking System or ATS for short - is a software that is used by recruiters/recruiting agencies to collect, sort, parse and rank prospective job-seekers according to open positions. You might be asking why companies use this and/or this might seem unfair. Well, the truth is that Fortune 500 companies receive way too many applicants to be sorted by humans. This would clog up the pipeline and make hiring slower. 
 
 So whether we like it or not, the ATS is here to stay.
 
 
 ### I. Basics of how ATS works
-The ATS parses a resume's content into categories and then scans those categories for specific keywords which have been predetermined and then ranks the resume. If there was **x%** match then the resume is passed on to the recruiter.
+The ATS parses a resume's content into categories and then scans those categories for specific keywords that have been predetermined and then rank the resume. If there was **x%** match then the resume is passed on to the recruiter.
 
-So this only means that the ATS is designed to weed out the **least-qualified** applicants as opposed to identify which candidates are the best.
+So this only means that the ATS is designed to weed out the **least-qualified** applicants as opposed to identifying which candidates are the best.
 
 This as you may have guessed also weeds out the best candidates who don't have the **right words** in their resume. If this is one of you and you have received tons of rejections it's not your fault.
 
 ### II. Beating ATS
 
-**So here is where resumes go wrong. (stats accoriding to TopResume)**
+**So here is where resumes go wrong. (stats according to TopResume)**
 1. 25% of applicants have buried contact information in the header.
 2. 43% of applicants are submitted with an incompatible file type.
 3. 21% of applicants use graphics or charts which are unparsable.
 4. People use fancy templates that are also unparsable.
 
-Contrary to popular belief, PDF is not the most ATS-friendly file type. While PDF's do a phenomenal job at presevering design,style and format of your resume not all ATS fully support PDF's. So, unless the file type listed is pdf stick to using **.doc or .docx**. Amazingly, **.txt** file types are the best for ATS parsing but limit your options for style and design.
+Contrary to popular belief, PDF is not the most ATS-friendly file type. While PDFs do a phenomenal job at preserving the design, style and format of your resume not all ATS fully support PDFs. So, unless the file type listed is pdf stick to using **.doc or .docx**. Amazingly, **.txt** file types are the best for ATS parsing but limit your options for style and design.
 
 ### II(a) Optimize with the right keywords
-One of the best ways to beat ATS is to use the right words in your resume. A lot of times, you might think that using words like "attention to detail", "proactive" etc may seem like fluff or too much but if it's in the job-description, unfortunately it might have been added to ATS. so to play if safe, you can add it to soft-skills part of your resume. No one is going to judge you for adding those words so better safe than sorry!
+One of the best ways to beat ATS is to use the right words in your resume. A lot of times, you might think that using words like "attention to detail", "proactive" etc may seem like fluff or too much but if it's in the job-description, unfortunately it might have been added to ATS. so to play it safe, you can add it to soft-skills part of your resume. No one is going to judge you for adding those words so better safe than sorry!
 
-A great website for this is [jobscan.io](https://www.jobscan.co/) which has a ATS parser for anyone who wants to use it. It also provides great metrics such as what experiences it found, skills found etc. You can just paste the job description in one box and your resume in another and Voila! you have your results ready.
+A great website for this is [jobscan.io](https://www.jobscan.co/) which has an ATS parser for anyone who wants to use it. It also provides great metrics such as what experiences it found, skills found, etc. You can just paste the job description in one box and your resume in another and Voila! you have your results ready.
 
 Be sure to tinker with the application and optimize your resume as needed by the job you are applying for.
 
 ## 2. Getting your resume past the recruiter
 
-The recruiter is basically the human version of ATS who also scans your resume for keywords and basically hands the resumes which passes the screen over to the hiring manager.
+The recruiter is the human version of ATS who also scans your resume for keywords and hands the resumes which passes the screen over to the hiring manager.
 
 The recruiter specifically looks for one thing: **TECHNICAL BUZZWORDS**.
 (Note: This is not only valid for online apps but career fairs as well something we will discuss in part 2.)
 
 Now what are technical buzzwords? Haven't you already passed the ATS scan? The recruiter wants to see if you are fit for the job. The recruiter will do an initial scan of your resume and try to find experiences in FAANG or other BIG-N companies. 
 
-Now will go to the skills section of your resume and try to find the predetermined technical skills that are required for the job.
+Now, I will go to the skills section of your resume and try to find the predetermined technical skills that are required for the job.
 
 For Example, if your job posting says:
 
 > We use the MERN stack and AWS.
 
-Make sure that you have the keyword "MERN stack" in your resume as well as MongoDB, React.js, Node and Express.js. The recruiters are not technical people. They are like a **pattern matching algorithm** who make a binary 0 or 1 decision based on what skills they see.
+Make sure that you have the keyword "MERN stack" in your resume as well as MongoDB, React.js, Node and Express.js. The recruiters are not technical people. They are like a **pattern matching algorithm** who makes a binary 0 or 1 decision based on what skills they see.
 
-Recruiter are also known for discarding resumes for things that you and I think are irrelevant to whether or not you are qualified to do your job. Unfortunately, it happens and here are some things to avoid.
+Recruiters are also known for discarding resumes for things that you and I think are irrelevant to whether or not you are qualified to do your job. Unfortunately, it happens and here are some things to avoid.
 
 1. 78% of resumes are discarded for an unprofessional email address!
 2. 88% of resumes are discarded if they include a photo.
-3. They spend 80% of time on past-companies and skills **(A WHOLE 4.8seconds!)**
+3. They spend 80% of the time on past-companies and skills **(A WHOLE 4.8seconds!)**
 
 Conclusions:
-Make sure that you have the right skills listed in your resume, have a professional email id, no picture etc.
+Make sure that you have the right skills listed in your resume, have a professional email id, no pictures, etc.
 
 ## 3. Getting your resume approved by the hiring manager
 
@@ -120,21 +120,21 @@ Now this is the most important part. You've made it this far and this decision b
 
 The engineering managers are looking for the following skills
 1. Technical Experience: Whether it has been in a group project, solo project or internships.
-2. Communication skills: Managers are very **BIG** on communication skills. Makes sense they have to manage a group of people and they want to see whether or not you have the technical chops but the communication skills as well.
+2. Communication skills: Managers are very **BIG** on communication skills. It makes sense they have to manage a group of people and they want to see whether or not you have the technical chops but the communication skills as well.
 
-In the valley, technical experience is fortunately(unfortunately) found everywhere. Every other coder has worked someplace, know X stack etc. How do you differenciate yourself? Be excellent at soft-skills.
+In the valley, technical experience is, fortunately(unfortunately) found everywhere. Every other coder has worked someplace, knows X stack, etc. How do you differentiate yourself? Be excellent at soft-skills.
 Technical skills are important don't get me wrong. But it's the soft skills that help you stand out from the crowd.
 
 ## An Unethical Social Experiment that you should (shouldn't) try.
 
-Here is what I did for **X company.(Not my current).** I created 2 email addresses one of which was my primary email to apply for jobs and another which was a throwaway for this experiment.
+Here is what I did for **X company. (Not my current).** I created 2 email addresses one of which was my primary email to apply for jobs and another which was a throwaway for this experiment.
 
-I applied to the position which was (SWE New Grad) using the exact same resume execpt for the **following small changes.**
+I applied to the position which was (SWE New Grad) using the same resume except for the **following small changes.**
 
 In the resume for the throwaway company, I added the following keywords:
-Harvard, Google, Yale, Facebook, Microsoft and basically every other programming language/skill on the planet F#, hardworking you name it.
+Harvard, Google, Yale, Facebook, Microsoft and every other programming language/skill on the planet F#, hardworking you name it.
 
-The only difference is that I wrote those keywords in **0.01px font.** basically making it invisible to any human except you guessed it the ATS.
+The only difference is that I wrote those keywords in **0.01px font.** making it invisible to any human except you guessed it the ATS.
 
 The result? The throwaway account got me an interview and my primary account did not.
 
@@ -154,7 +154,7 @@ You made it! A quick recap of what we did:
 There's still much more reading to do:
 
 - How to impress recruiters [Undercover Recruiter](https://theundercoverrecruiter.com/resume-dos-donts/), [Keras](https://keras.io/), and [PyTorch](https://pytorch.org/).
-- [5 Skills Hiring managers Look for in Engineers](https://www.engineering.com/JobArticles/ArticleID/13894/5-Skills-Hiring-Managers-Look-for-in-Engineering-Grads.aspx).
+- [5 Skills Hiring Managers Look for in Engineers](https://www.engineering.com/JobArticles/ArticleID/13894/5-Skills-Hiring-Managers-Look-for-in-Engineering-Grads.aspx).
 - [9 Things you need to know about ATS](https://www.jobscan.co/blog/8-things-you-need-to-know-about-applicant-tracking-systems/).
 - Resume parsing [Jobscan.co](https://jobscan.co/).
 
