--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -5,6 +5,7 @@ template: "post"
 usesKatex: true
 draft: false
 slug: "/blog/get-a-job-2/"
+img: /resume.jpg
 isML: true
 category: "landing a tech job"
 tags:
