--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -1,11 +1,11 @@
 ---
-title: "How to get a job in tech: Applying to Jobs"
+title: "How to get a job in tech: Applying (2/4)"
 date: "2020-03-11T12:00:00.000Z"
 template: "post"
 usesKatex: true
 draft: false
 slug: "/blog/get-a-job-2/"
-img: /resume.jpg
+img: /media/sf.jpg
 isML: true
 category: "landing a tech job"
 tags:
