--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -5,7 +5,7 @@ template: "post"
 usesKatex: true
 draft: false
 slug: "/blog/get-a-job-2/"
-img: /media/sf.jpg
+img: https://github.com/gautamtata/blog/blob/master/static/media/san.jpg?raw=true
 isML: true
 category: "landing a tech job"
 tags:
