--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -3,7 +3,7 @@ title: "Getting a job in tech: Interviewing (3/4)"
 date: "2019-08-08T12:00:00.000Z"
 dateModified: "2020-03-12T12:00:00.000Z"
 template: "post"
-img: /media/san.jpg
+img: https://github.com/gautamtata/blog/blob/master/static/media/sf2.png?raw=true
 draft: false
 isML: true
 slug: "/blog/get-a-job-3/"
