--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -6,7 +6,7 @@ template: "post"
 usesKatex: true
 draft: false
 slug: "/blog/get-a-job-1/"
-img: /media/sf.jpg
+img: https://github.com/gautamtata/blog/blob/master/static/media/sf.jpg?raw=true
 isML: true
 category: "landing a tech job"
 tags:
