grammatical bug fixes

--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -1,5 +1,5 @@
 ---
-title: "How to get a job in tech: Preparing for Interviews"
+title: "How to get a job in tech: Negotiating your offer"
 date: "2019-05-29T12:00:00.000Z"
 dateModified: "2019-08-08T12:00:00.000Z"
 template: "post"
@@ -14,7 +14,7 @@ tags:
   - "new grads"
   - "how to"
   - "cracking the tech interview"
-description: An Indepth walkthrough of how to prepare for your interviews.
+description: A guide that helps you maximize your offer.
 prev: "/blog/get-a-job-3/"
 next: "/blog/get-a-job-2/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1133752584383205377
