--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -14,7 +14,7 @@ tags:
   - "new grads"
   - "how to"
   - "cracking the tech interview"
-description: "A ready to go resume is your most powerful way to get interviews. Let's get your resume there."
+description: "A ready to go resume is your most powerful way to get interviews."
 prev: "/series/how-to-get-a-job-in-tech/"
 next: "/blog/get-a-job-2/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1102644406727966722
