--- a/content/posts/2020-03-09-get-a-job-2.md
+++ b/content/posts/2020-03-09-get-a-job-2.md
@@ -13,7 +13,7 @@ tags:
   - "new grads"
   - "how to"
   - "cracking the tech interview"
-description: 4 ways to effectively apply to jobs.
+description: Four ways to effectively apply to jobs.
 prev: "/blog/get-a-job-1/"
 next: "/blog/get-a-job-3/"
 discussLinkTwitter: https://twitter.com/victorczhou/status/1154055678518054912?s=20
