--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -13,7 +13,7 @@ tags:
   - "new grads"
   - "how to"
   - "cracking the tech interview"
-description: A beginner friendly guide to cracking the behavioral an coding interview
+description: Cracking the behavioral and coding interview.
 prev: "/blog/get-a-job-2/"
 next: "/blog/get-a-job-4/"
 ---
