content for blog 3

--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -20,4 +20,51 @@ next: "/blog/get-a-job-4/"
 
 ![](./media-link/sf.jpg)
 
-COMING SOON!
+# Introduction and Background
+
+Have you ever failed a tech interview? I have failed a ton of interviews from behavioral, phone-screens and onsite whiteboarding questions. I can remember them to be embarrasing situations that I have faced but it's also something that I learned a lot from.
+
+I realized that I didn't have a set schedule and didn't put in enough prep time and thought that coding experience in previous internships would help me crack these interviews. Well, coding interviews are a different beast. The test for algorithmic puzzles is very different from coding in real life and therefore, one needs to prepare accordingly.
+
+Interviewers want to work with candidates they like. Leaving a good impression greatly improve your chances of success.
+
+> Tell me about yourself. How did you get into coding? Why was X(job specific) a good fit for you? How do your goals align with X companies?
+
+## The elevator pitch
+An elevator pitch is exactly what it sounds. Imagine you are stuck in an elavator with someone who you want to sell yourself to. You have about 30 seconds to a minute to get your point across.
+
+* Keep it short
+* Get straight to the point
+* Grab their attention
+
+For example, for internships you can mention your name, school, area of focus and past internships/noteworthy projects. For full-time positions, you should mention past-companies, note-worthy projects etc.
+
+> My name is Gautam and I'm currently a student at CSU Monterey Bay. I have previously interned at the Museum of Natural History where I developed a application that visualizes climate change in Monterey county which is used by over 50 researchers. 
+>
+> I became really interested in the mapping space because I loved the power of spreading a message across using a Map. Since then I have been working at learning X tools and researching X possibilities which is when I came across Uber maps. I'd be greatful to speak with you about X opportunity. 
+
+With an interviewer, you must always ask the question: Why do they want me? Align yourself with the values of the company, understand what tech-stack they use, read their engineering blog and impress the interviewer.
+
+
+## Assumptions
+
+The first assumption is that you know how to code. You know a language that you are familiar with and (hopefully) know the in's and out's.
+
+This article covers a general tech-interview blueprint: Behavioral interviews and technical interviews. It **does not** cover specific area questions like web development, embedded systems etc.
+
+## Time to prepare
+
+Assume that to cover preperation end to end you will need a full month of dedication spending 2-3 hours a day prepping. You can increase or decrease that based on your experience.
+
+## Table of contents
+
+1. Cracking the behavioral interview
+2. Cracking the technical interview
+3. Do's and Don'ts during the interview
+4. Pracitcing mock interviews
+5. Interviewing successfully
+
+**Now that you have a good understanding of what to cover, let's dive right into it.**
+
+## Cracking the technical interview
+
