camel casing headings

--- a/content/posts/2019-05-29-get-a-job-4.md
+++ b/content/posts/2019-05-29-get-a-job-4.md
@@ -1,5 +1,5 @@
 ---
-title: "How to get a job in tech: Negotiating your offer"
+title: "How To Get A Job In Tech: Negotiating Your Offer"
 date: "2019-05-29T12:00:00.000Z"
 dateModified: "2019-08-08T12:00:00.000Z"
 template: "post"
