--- a/content/posts/2020-03-08-get-a-job-1.md
+++ b/content/posts/2020-03-08-get-a-job-1.md
@@ -1,5 +1,5 @@
 ---
-title: "How to get a job in tech: Resume (1/4)"
+title: "How To Get A Job In Tech: Resume (1/4)"
 date: "2020-03-11T12:00:00.000Z"
 dateModified: "2020-03-21T12:00:00.000Z"
 template: "post"
