--- a/content/posts/2020-03-10-get-a-job-3.md
+++ b/content/posts/2020-03-10-get-a-job-3.md
@@ -1,5 +1,5 @@
 ---
-title: "Getting a job in tech: Interviewing (3/4)"
+title: "How To Get A Job In Tech: Interviewing (3/4)"
 date: "2019-08-08T12:00:00.000Z"
 dateModified: "2020-03-12T12:00:00.000Z"
 template: "post"
